fix: fixed css grid issues on firefox

--- a/src/cdn/elements/mainLayouts.css
+++ b/src/cdn/elements/mainLayouts.css
@@ -1,7 +1,7 @@
 :has(> main) {
   display: grid;
-  grid-template-columns: auto 1fr auto;
-  grid-template-rows: auto auto 1fr auto auto;
+  grid-template-columns: auto minmax(0, 1fr) auto;
+  grid-template-rows: auto auto minmax(0, 1fr) auto auto;
   grid-template-areas: 
     "left top right"
     "left header right"
